--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<br>
 	<blockquote>
 		<pre>
-			Your time is limited,
-			don't waste it living
+			Your <b>time</b> is limited,
+			don't <em>waste</em> it living
 			someone else's life...
 		</pre>
 	</blockquote>
